<resources>
    <string name="app_name">Member</string>
    <string name="member_wxd_000">登陆</string>
    <string name="member_wxd_001">DaDong</string>
    <string name="member_wxd_002">请输入您的手机号</string>
    <string name="member_wxd_003">+86</string>
    <string name="member_wxd_004">请输入密码</string>
    <string name="member_wxd_005">&lt;font color="#AAAAAA">没有账号 &#160; &lt;/font> &lt;font color="#03B1FF"> 立即注册 &lt;/font></string>
    <string name="member_wxd_006">查看个人资料并编辑</string>
    <string name="member_wxd_007">日程</string>
    <string name="member_wxd_008">设置</string>
    <string name="member_wxd_009">联系DaDong</string>
    <string name="member_wxd_010">密码修改</string>
    <string name="member_wxd_011">清除缓存</string>
    <string name="member_wxd_012">系统设置</string>
    <string name="member_wxd_013">返回</string>
    <string name="member_wxd_014">请输入旧密码</string>
    <string name="member_wxd_016">请输入新密码</string>
    <string name="member_wxd_017">再次输入新密码</string>
    <string name="member_wxd_018">完成</string>
    <string name="member_wxd_019">设置密码</string>
    <string name="member_wxd_020">性别</string>
    <string name="member_wxd_021">女</string>
    <string name="member_wxd_022">男</string>
    <string name="member_wxd_023">昵称</string>
    <string name="member_wxd_024">年龄</string>
    <string name="member_wxd_025">城市</string>
    <string name="member_wxd_026">签名</string>
    <string name="member_wxd_027">做好自己，无需事故</string>
    <string name="member_wxd_028">个人资料编辑</string>
    <string name="member_wxd_029">请输入手机号码</string>
    <string name="member_wxd_030">取消</string>
    <string name="member_wxd_031">完成</string>
</resources>

